Working on SIP Devices in MACD Tool
