# storage/api-docs/api-docs.json
@@ -2081,39 +2081,6 @@
                 }
             }
         },
-        "/telephony/api/cucm/user/{username}": {
-            "get": {
-                "tags": [
-                    "Management - CUCM"
-                ],
-                "summary": "Get User by Username",
-                "description": "",
-                "operationId": "getUser",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "parameters": [
-                    {
-                        "name": "username",
-                        "in": "path",
-                        "description": "Username",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
-                    },
-                    "401": {
-                        "description": "Unauthorized user"
-                    }
-                }
-            }
-        },
         "/telephony/api/cucmris/getphone/ip/{name}": {
             "get": {
                 "tags": [
@@ -2550,6 +2517,100 @@
                         "name": "operator",
                         "in": "formData",
                         "description": "Operator Last 4 digits of DID",
+                        "required": false,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                }
+            }
+        },
+        "/telephony/api/cucm/user/{username}": {
+            "get": {
+                "tags": [
+                    "Management - CUCM - User Provisioning"
+                ],
+                "summary": "Get User by Username",
+                "description": "",
+                "operationId": "getUser",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "username",
+                        "in": "path",
+                        "description": "Username",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized user"
+                    }
+                }
+            }
+        },
+        "/telephony/api/cucm/user": {
+            "post": {
+                "tags": [
+                    "Management - CUCM - User Provisioning"
+                ],
+                "summary": "Create New Local End User in CUCM",
+                "description": "",
+                "operationId": "addUser",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "firstname",
+                        "in": "formData",
+                        "description": "firstname",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "lastname",
+                        "in": "formData",
+                        "description": "firstname",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "username",
+                        "in": "formData",
+                        "description": "firstname",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "digestCredentials",
+                        "in": "formData",
+                        "description": "SIP Digest Password",
+                        "required": false,
+                        "type": "string"
+                    },
+                    {
+                        "name": "dn",
+                        "in": "formData",
+                        "description": "Telephone Number",
                         "required": false,
                         "type": "string"
                     }
